# pyside2-qtquick-qml-examples

now/: README  now_example.qml  now_example_pyqt5.py  now_example_pyside2.py
now_catkin_package/: CMakeLists.txt  package.xml  setup.py
now_catkin_package/scripts/: now
now_catkin_package/src/pynow/: __init__.py  now_model.py
